"Update branch restrictions in Swift workflow to include \"langchain\" branch."

--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -5,9 +5,9 @@ name: Swift
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "langchain" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "langchain" ]
 
 jobs:
   build:
